feat: add annotated screenshots
